test/valid/builtins/Boolean.js
var x = Boolean(123);
x = false;
x = Boolean({});
x = Boolean('a');
x = Boolean(NaN);
x = Boolean([]);
x = Boolean(null);
x = Boolean(false);
