test/invalid/for-in.js
var arr = ['a','b'];

var i = 0;
for (i in arr) {

}
